--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             </p>
                         </td>
                         <td style="padding:2.5%;width:37%;max-width:37%">
-                            <img src="images/profile.JPG" alt="profile photo" style="width:100%;max-width:100%;object-fit:cover;border-radius:20%;" class="hoverZoomLink" loading="lazy" width="200" height="200">
+                            <img src="images/profile.JPG" alt="profile photo" style="width:100%;max-width:100%;object-fit:cover;border-radius:10%;" class="hoverZoomLink" loading="lazy" width="200" height="200">
 
                         </td>
                     </tr>
@@ -121,7 +121,7 @@
                                 <a href="#"><span class="papertitle">Exploring Consumer Preferences</span></a><br>
                                 Bentley-Gallup Force for Good Survey<br>
                                 Performed hypothesis testing on randomized survey responses to assess question framing impact.<br>
-                                <a href="#">project page</a>
+                                <a href="projects/Gallup_Bentley.R" download>Download Sample R Script</a>
                             </td>
                         </tr>
                         <tr>
@@ -130,8 +130,8 @@
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">SAT Scores and Racial Composition Analysis</span></a><br>
-                                Conducted regression analysis on Massachusetts school data to examine demographic influences.<br>
-                                <a href="#">project page</a>
+                                Conducted regression analysis on Massachusetts high school data to examine demographic influences.<br>
+                                <a href="data/Mass Public High School SAT Score Report.pdf">project page</a>
                             </td>
                         </tr>
                     </tbody>
