--- a/publications.html
+++ b/publications.html
@@ -120,11 +120,11 @@
                                 <img src="images/bayesian_analysis.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Marking Contemporary America's Attitudinal Stance Towards Modern Businesses: a Bayesian Attempt to Detect Deviation Patterns Based on Demographics and Politics</span></a><br>
+                                <span class="papertitle">Marking Contemporary America's Attitudinal Stance Towards Modern Businesses: a Bayesian Attempt to Detect Deviation Patterns Based on Demographics and Politics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Chance (American Statistical Association)</em>, Accepted<br>
                                 Bayesian Analysis of America's Business Attitudes<br>
-                                <a href="#">paper</a>
+                                <a href="#">Paper</a>
                             </td>
                         </tr>
                         <tr>
@@ -132,7 +132,7 @@
                                 <img src="images/agreement_gambles.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Are All Bets Off When It Comes to Agreement Gambles?</span></a><br>
+                               <span class="papertitle">Are All Bets Off When It Comes to Agreement Gambles?</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Significance (Royal Statistical Society)</em>, Under review<br>
                                 Analyzed decision-making under uncertainty using probabilistic models.<br>
@@ -144,7 +144,7 @@
                                 <img src="images/rasch_models.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Does Age Correlate with One's Ungauged Opinion on Modern Business Practices?</span></a><br>
+                                <span class="papertitle">Does Age Correlate with One's Ungauged Opinion on Modern Business Practices?</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Significance (Royal Statistical Society)</em>, Under review<br>
                                 Applied Rasch model to uncover generational divides.<br>
@@ -174,11 +174,11 @@
                                 <img src="images/torn_carpet.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="https://nightingaledvs.com/the-stuff-we-cannot-sweep"><span class="papertitle">The Stuff We Cannot Sweep Under a Torn Carpet:
+                                <span class="papertitle">The Stuff We Cannot Sweep Under a Torn Carpet:
                                     Perfectly Imperfect Tessellations From Slices of Maslows' Triangle</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Nightingale, Data Visualization Society</em><br>
-                                <a href="#">visualization</a>
+                                <a href="https://nightingaledvs.com/the-stuff-we-cannot-sweep">Read Here</a>
                             </td>
                         </tr>
                         <tr>
@@ -186,11 +186,11 @@
                                 <img src="images/pyramids.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="https://nightingaledvs.com/pyramids-of-priorities/"><span class="papertitle">Pyramids of Priorities and a Poisoned Omen: 
+                                <span class="papertitle">Pyramids of Priorities and a Poisoned Omen: 
                                     Differing Hierarchies of Desired Business Ethics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri <br>
                                 <em>Nightingale, Data Visualization Society</em><br>
-                                <a href="#">visualization</a>
+                                <a href="https://nightingaledvs.com/pyramids-of-priorities/">Read Here</a>
                             </td>
                         </tr>
                     </tbody>
