--- a/experience.html
+++ b/experience.html
@@ -99,7 +99,15 @@
                         <li>Designed Python scripts to automate investment research and time series analysis.</li>
                         <li>Created interactive dashboards using Tableau and R Shiny.</li>
                     </ul>
-                
+                <h2>Work Experience</h2>
+                <p>
+                    <strong>Finance Manager</strong><br>
+                    Hezardastan IT Group, Tehran, Iran | March 2020 – May 2022<br>
+                    <ul>
+                        <li>Partnered with sales and product team on value chain analysis and overhaul of service delivery, reducing costs by 30% and customer churn by 5%; applied Monte Carlo simulation to optimize service dispatch, increasing capacity utilization by 25%.</li>
+                        <li>DResearched investment and expansion opportunities using Cost-Benefit Analysis and Economic Value Added to inform strategic business model decisions.</li>
+                        <li>Led data migration and unified multiple databases, reducing reporting time from 2 days to real-time.</li>
+                    </ul>
                 </p>
                 <h2>Technical Skills</h2>
                 <p>
